# LearnerLLM

./: .gitignore  ANDROID_STUDIO_SETUP.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAY_STORE_SETUP.md  README.md  SECURITY.md  build.gradle.kts  firestore.rules.example  local.properties.example  render.yaml  settings.gradle.kts
backend/: .dockerignore  .env.example  CLOUDFLARE_TUNNEL_DEPLOY.md  CLOUDFLARE_TUNNEL_VPC_DEPLOY.md  Dockerfile  FLY_DEPLOY.md  NORTHFLANK_DEPLOY.md  ORACLE_DEPLOY.md  README.md  RENDER_DEPLOY.md  SELF_HOST.md  VERCEL_DEPLOY.md  docker-compose.selfhost.yml  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  requirements.txt  vercel.json
backend/learner_api/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/learner_api/routers/: billing.py  chat.py  me.py  progress.py  reports.py  scans.py  subjects.py
backend/learner_api/services/: billing.py  fallback.py  message_quota.py  model_registry.py  openrouter.py  progress.py  prompt_builder.py  report_email.py  scan_quota.py  tutor_engine.py
backend/tests/: conftest.py  test_chat.py  test_health.py  test_me.py  test_message_quota.py  test_reports.py  test_scans.py  test_subjects.py
workers/: .gitignore  CLOUDFLARE_DEPLOY.md  README.md  package.json  pyproject.toml  wrangler.jsonc
workers/migrations/: 0001_schema.sql  0002_content_reports.sql
workers/src/: worker.py
workers/src/learner_api/: auth.py  config.py  database.py  firebase_auth.py  http_client.py  main.py  models.py  schemas.py
workers/src/learner_api/routers/: billing.py  chat.py  (+5 more)
(+94 files in other folders)
